DEPL-8731 Fixed Google CSE box on Firefox

--- a/styles/xebialabs.css
+++ b/styles/xebialabs.css
@@ -209,6 +209,9 @@ input.gsc-input, .gsc-input-box, .gsc-input-box-hover, .gsc-input-box-focus, .gs
   box-sizing: content-box;
   line-height: normal;
 }
+.gsc-input {
+  width: 300px;
+}
 .gsc-tabsArea div {
   overflow: visible !important;
 }
